// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/BuyPage/actions/checkTimeoutEvent should checkTimeoutEvent should create checkTimeoutEvent action 1`] = `
Object {
  "type": "dicoapp/BuyPage/CHECK_TIMEOUT_EVENT",
}
`;

exports[`containers/BuyPage/actions/checkUpdateSwapEvent should checkUpdateSwapEvent should create checkUpdateSwapEvent action 1`] = `
Object {
  "type": "dicoapp/BuyPage/CHECK_UPDATE_SWAP_EVENT",
}
`;

exports[`containers/BuyPage/actions/closeDetailModal should closeDetailModal should create closeDetailModal action 1`] = `
Object {
  "type": "dicoapp/BuyPage/SWAP_DETAIL_MODAL_CLOSE",
}
`;

exports[`containers/BuyPage/actions/loadBestPrice should loadBestPrice should create loadBestPrice action 1`] = `
Object {
  "payload": Object {
    "address": "",
    "age": 0,
    "avevolume": 0,
    "base": "COQUI",
    "bestPrice": 0,
    "depth": 0,
    "maxvolume": 0,
    "numutxos": 0,
    "price": 0,
    "pubkey": "",
    "rel": "PIZZA",
    "zcredits": 0,
  },
  "type": "dicoapp/BuyPage/LOAD_BEST_PRICE",
}
`;

exports[`containers/BuyPage/actions/loadBuyCoin should loadBuyCoin should create loadBuyCoin action 1`] = `
Object {
  "payload": Object {
    "amount": 1.234,
    "basecoin": "BTC",
    "paymentcoin": "KMD",
  },
  "type": "dicoapp/BuyPage/LOAD_BUY_COIN",
}
`;

exports[`containers/BuyPage/actions/loadBuyCoinError should loadBuyCoin should create loadBuyCoinError action 1`] = `
Object {
  "error": Object {
    "message": "Value is large than balance",
  },
  "type": "dicoapp/BuyPage/LOAD_BUY_COIN_ERROR",
}
`;

exports[`containers/BuyPage/actions/loadPrice should loadPrice should create loadPrice action 1`] = `
Object {
  "payload": Object {
    "coin": "coin",
  },
  "type": "dicoapp/BuyPage/LOAD_PRICE",
}
`;

exports[`containers/BuyPage/actions/loadPrices should loadPrices should create loadPrices action 1`] = `
Object {
  "type": "dicoapp/BuyPage/LOAD_PRICES",
}
`;

exports[`containers/BuyPage/actions/loadPricesSuccess should loadPricesSuccess should create loadPricesSuccess action 1`] = `
Object {
  "type": "dicoapp/BuyPage/LOAD_PRICES_SUCCESS",
}
`;

exports[`containers/BuyPage/actions/makeANewSwap should makeANewSwap should create makeANewSwap action 1`] = `
Object {
  "type": "dicoapp/BuyPage/SWAP_MAKE_A_NEW",
}
`;

exports[`containers/BuyPage/actions/openDetailModal should openDetailModal should create openDetailModal action 1`] = `
Object {
  "payload": Object {
    "uuid": undefined,
  },
  "type": "dicoapp/BuyPage/SWAP_DETAIL_MODAL_OPEN",
}
`;

exports[`containers/BuyPage/actions/openDetailModal should openDetailModal should create openDetailModal action 2`] = `
Object {
  "payload": Object {
    "uuid": "uuid",
  },
  "type": "dicoapp/BuyPage/SWAP_DETAIL_MODAL_OPEN",
}
`;

exports[`containers/BuyPage/actions/timeoutSwap should timeoutSwap should create timeoutSwap action 1`] = `
Object {
  "payload": Object {
    "alice": "BEER",
    "bob": "COQUI",
    "id": 3624682363,
    "quoteid": 0,
    "requestid": 0,
    "uuid": "bc5e1509b2aea898b8dff71ecc3fa7d5bc7c361fb14187fe9bc06916fae63811",
  },
  "type": "dicoapp/BuyPage/SWAP_TIMEOUT",
}
`;
